--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -5,19 +5,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Soft UI - Neumorphism Style UI Kit">
+    <meta name="author" content="kingstudio.ro">
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/favicon.png">
+    <link rel="icon" href="../assets/images/favicon.png">
     <!-- Site Title -->
     <title>Style Guide Generator</title>
     <!-- Bootstrap 4 core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" type="text/css">
     <!-- Custom Styles -->
-    <link href="assets/css/animate.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
-    <link href="assets/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap">
+    <link  rel="stylesheet" href="../assets/css/fontawesome-all.min.css" type="text/css">
 </head>
 
 <body>
@@ -30,27 +34,28 @@
     </div>
 
     <div class="container">
-        <h1>Style Guide Generator</h1>
+        <h1 class="h1">Style Guide Generator</h1>
     </div>
 
-
+    {% block content %}
+    {% endblock %}
 
 
 
     <!-- core JavaScript -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
     <!-- preloader -->
-    <script src="assets/js/preloader.js"></script>
+    <script src="../assets/js/preloader.js"></script>
 
     <!-- smooth scroll -->
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/smooth-scroll.js"></script>
+    <script src="../assets/js/jquery.easing.min.js"></script>
+    <script src="../assets/js/smooth-scroll.js"></script>
 
     <!-- hide nav -->
-    <script src="assets/js/hide-nav.js"></script>
+    <script src="../assets/js/hide-nav.js"></script>
 
     <!-- tooltips -->
     <script>
