--- a/project/templates/home-anon.html
+++ b/project/templates/home-anon.html
@@ -12,7 +12,8 @@
                     Join our super happy group of users!
                 </h6>
                 <p class="fs-16 mb-40 tablet-lg-top">
-                    Register for a user account to generate and save your style guides! It's super simple for now, but we're
+                    Register for a user account to generate and save your style guides! It's super simple for now, but
+                    we're
                     adding more fun features that will make things more fun and interesting!
                 </p>
                 <p class="fs-16 mb-40 tablet-lg-top">
@@ -22,7 +23,7 @@
                     <i class="fas fa-user mr-5">
                     </i> Log In</a>
             </div>
-    
+
             <div class="col-lg-5 offset-lg-1">
                 <div class="card">
                     <div class="card-body">
@@ -36,14 +37,14 @@
                                     placeholder=" Email"
                                     style="font-family:'Font Awesome 5 Free', sans-serif !important; font-weight: 400">
                             </div>
-    
+
                             <div class="form-group">
                                 <input type="password" class="form-control pill mb-10" name="passwordLogin4"
                                     placeholder=" Password" required=""
                                     style="font-family:'Font Awesome 5 Free', sans-serif !important; font-weight: 400"
                                     aria-required="true">
                             </div>
-    
+
                             <button type="submit" class="btn btn-primary pill d-block w-100 mb-15">
                                 <i class="fas fa-sign-in-alt mr-5"></i>
                                 Sign Up
