moved models into single file for now

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -45,7 +45,7 @@ html {
   height: 100%;
   position: relative;
   color: #656774;
-  background-color: #fff;
+  background-color: #f5f7fe;
   font-weight: 300;
   letter-spacing: 0.015rem;
 }
