register login and logout routes added and templates setup

--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -9,19 +9,14 @@
                     Maker
                 </h2>
                 <h6 class="secondary-font fs-14 fw-bold mb-40">
-                    Join our super happy group of users!
+                    Login to your account to get started!
                 </h6>
                 <p class="fs-16 mb-40 tablet-lg-top">
-                    Register for a user account to generate and save your style guides! It's super simple for now, but
-                    we're
-                    adding more fun features that will make things more fun and interesting!
-                </p>
-                <p class="fs-16 mb-40 tablet-lg-top">
-                    Already have an acount? Login to get started!
+                    Don't have an account yet? Register for a user account to generate and save your style guides! 
                 </p>
                 <a href="#x" class="btn btn-primary pill m-10 ml-0">
                     <i class="fas fa-user mr-5">
-                    </i> Log In</a>
+                    </i>Sign Up</a>
             </div>
 
             <div class="col-lg-5 offset-lg-1">
@@ -30,7 +25,7 @@
                         <div class="promo-big promo-icon-bg circle m-y-30 ml-auto mr-auto raised-sm">
                             <i class="fas fa-user promo-icon text-primary"></i>
                         </div>
-                        <p class="text-center fs-24 fw-bold mb-30 text-primary">Sign Up</p>
+                        <p class="text-center fs-24 fw-bold mb-30 text-primary">Login</p>
                         <form class="validation-inner" id="login-form4" novalidate="novalidate">
                             <div class="form-group">
                                 <input type="email" class="form-control pill mb-10" name="usernameLogin4"
@@ -47,7 +42,7 @@
 
                             <button type="submit" class="btn btn-primary pill d-block w-100 mb-15">
                                 <i class="fas fa-sign-in-alt mr-5"></i>
-                                Sign Up
+                                Login
                             </button>
                         </form>
                     </div>
