--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -38,7 +38,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light custom-menu menu-pills bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Style Guide Maker</a>
+            <a class="navbar-brand" href="/">Style Guide Maker</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbar-toggle-pills">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a class="nav-link active" href="/">
                             <i class="fas fa-home mr-5"></i>
                             <span>Home</span>
                         </a>
@@ -58,19 +58,19 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/logout">
                             <i class="fas fa-sign-out-alt mr-5"></i>
                             <span>Logout</span>
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/login">
                             <span>Login</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/login">
                             <span>Sign Up</span>
                         </a>
                     </li>
