--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -19,7 +19,7 @@
                 <p class="fs-16 mb-40 tablet-lg-top">
                     Already have an acount? Login to get started!
                 </p>
-                <a href="#x" class="btn btn-primary pill m-10 ml-0">
+                <a href="/login" class="btn btn-primary pill m-10 ml-0">
                     <i class="fas fa-user mr-5">
                     </i> Log In</a>
             </div>
