--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap">
     <link  rel="stylesheet" href="/static/css/fontawesome-all.min.css" type="text/css">
 
-    <script src="https://kit.fontawesome.com/d14a6789f5.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     
 </head>
