--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -14,7 +14,7 @@
                 <p class="fs-16 mb-40 tablet-lg-top">
                     Don't have an account yet? Register for a user account to generate and save your style guides! 
                 </p>
-                <a href="#x" class="btn btn-primary pill m-10 ml-0">
+                <a href="/register" class="btn btn-primary pill m-10 ml-0">
                     <i class="fas fa-user mr-5">
                     </i>Sign Up</a>
             </div>
