username and full name field data are swapping in db for some reason

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/">
                             <i class="fas fa-user mr-5"></i>
                             <span>Account</span>
                         </a>
