--- a/project/templates/user_profile.html
+++ b/project/templates/user_profile.html
@@ -11,6 +11,13 @@
                         <h3 class="mb-30 fw-bold"><span class="text-primary">Hi</span> {{ user.full_name }}</h3>
                         <p class=""><span class="text-primary">Username:</span> {{ user.username }}</p>
                         <p class="mb-30"><span class="text-primary">Member Since:</span> {{ user.timestamp }}</p>
+
+                        <form method="POST" action="/users/{{user.username}}/delete">
+                            {{ form.hidden_tag() }}
+                            <a href="/logout" class="btn btn-secondary">Logout</a>
+                            <button class="btn btn-outline-danger mx-3">Delete User</button>
+                        </form>
+                        
                     </div><!-- / box-description -->
                     <div class="row">
                         <div class="col-md-6 mb-30">
