--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -1,23 +1,134 @@
 {% extends 'base.html' %}
 {% block content %}
 <section class="lg">
-    <div class="section-title-area mb-40">
-        <h3 class="section-title">Style Guide Title</h3>
-        <h5 class="section-sub-title"><span class="fw-bolder">Designed by: </span>Sasha C</h5>
-        <h5 class="section-sub-title"><span class="fw-bolder">Last edited: </span>July 14, 2022</h5>
+    <div class="container">
+        <div class="section-title-area text-end">
+            <h2 class="section-title" >Style Guide Title</h3>
+            <p class="lead"><span class="fw-bold">Designed by: </span>Sasha C</p>
+            <p class="lead"><span class="fw-bold">Last edited: </span>July 14, 2022</p>
+        </div>
     </div>
+</section>
 
-    <div class="row v-center">
-        <div class="col-lg-6">
-            <h6>Colors</h6>
+
+<section>
+    <div class="container mt-20">
+
+        <div class="row v-top colors-section">
+            <div class="col-lg-3 pt-50">
+                <h6>Colors</h6>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+
+                <div class="sg-colors-row row">
+
+                    <div class="col-6 col-md-3 bg-white">
+                        <div class="p-20 bg-white">
+                            <div class="sg-color-block" style="background-color:black">
+                            </div>
+                            <div class="p-y-5">
+                                <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 bg-white">
+                        <div class="p-20 bg-white">
+                            <div class="sg-color-block" style="background-color:black">
+                            </div>
+                            <div class="p-y-5">
+                                <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 bg-white">
+                        <div class="p-20 bg-white">
+                            <div class="sg-color-block" style="background-color:black">
+                            </div>
+                            <div class="p-y-5">
+                                <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 bg-white">
+                        <div class="p-20 bg-white">
+                            <div class="sg-color-block" style="background-color:black">
+                            </div>
+                            <div class="p-y-5">
+                                <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
         </div>
 
-        <div class="col-lg-6">
-            <ul>
-                <li>
-                    
-                </li>
-            </ul>
+        <div class="row v-top typeface-section">
+            <div class="col-lg-3 pt-50">
+                <h6>Primary Typeface</h6>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+                <div class="row p-x-20">
+                    <span class="primary-typeface">Font</span>
+                </div>
+                <div class="row p-x-20">
+                    <div class="col-6 col-md-3 bg-white">
+                        <span class="typeface-weight">Aa</span>
+                    </div>
+
+                    <div class="col-6 col-md-3 bg-white">
+                        <span class="typeface-weight">Aa</span>
+                    </div>
+
+                    <div class="col-6 col-md-3 bg-white">
+                        <span class="typeface-weight">Aa</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row v-top typesetting-section">
+            <div class="col-lg-3 pt-50">
+                <h6>Typesetting</h6>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+                <div class="row p-x-20">
+                    <div class="col-6 col-md-3">
+                        <span class="typesetting-display">Display</span>
+                    </div>
+                </div>
+        
+            </div>
+        </div>
+
+        <div class="row v-top buttons-section">
+            <div class="col-lg-3 pt-50 pb-50">
+                <h6>Buttons</h6>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+        
+            </div>
+        </div>
+
+        <div class="row v-top sample-splash-section">
+            <div class="col-lg-3 pt-50">
+                <h6>Section Sample:</h6>
+                <p class="lead">Splash</p>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+        
+            </div>
+        </div>
+
+        <div class="row v-top sample-splash-section">
+            <div class="col-lg-3 pt-50">
+                <h6>Section Sample:</h6>
+                <p class="lead">Body</p>
+            </div>
+            <div class="col-lg-9 bg-white pt-30 pb-50">
+        
+            </div>
         </div>
 
     </div>
