more style guide template stuff

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -18,9 +18,30 @@
     font-size: 62px;
 }
 
-.typesetting-display {
-    font-size: 60px;
+.spacer-40 {
+    height: 40px;
 }
+
+.spacer-50 {
+    height: 50px;
+}
+
+.spacer-80 {
+    height: 80px;
+}
+
+.spacer-100 {
+    height: 100px;
+}
+
+.color-dot {
+    width: 28px;
+    height: 28px;
+    border-radius: 14px;
+    background-color: black;
+    margin-right: 20px;
+}
+
 
 /*---------- ui ----------*/
 .color-box {
