--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="row v-top typeface-section">
-            <div class="col-lg-3 pt-50">
+            <div class="col-lg-3 pt-60">
                 <h6>Primary Typeface</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
@@ -89,21 +89,209 @@
         </div>
 
         <div class="row v-top typesetting-section">
-            <div class="col-lg-3 pt-50">
+            <div class="col-lg-3 pt-60">
                 <h6>Typesetting</h6>
             </div>
-            <div class="col-lg-9 bg-white pt-30 pb-50">
-                <div class="row p-x-20">
-                    <div class="col-6 col-md-3">
-                        <span class="typesetting-display">Display</span>
+            <div class="col-lg-9 bg-white pt-50 pb-50">
+                <div class="row p-x-20 align-items-end ts-h1-row">
+                    <div class="col-8">
+                        <div class="h1 ts-h1 m-y-0">Display</div>
+                    </div>
+                    <div class="col-4 h1-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>H1</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Splash, Modal Titles</div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-h2-row">
+                    <div class="col-8">
+                        <div class="h2 ts-h2 m-y-0">Header</div>
+                    </div>
+                    <div class="col-4 h2-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>H2</b> 40px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Page Titles</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-h3-row">
+                    <div class="col-8">
+                        <div class="h3 ts-h3 m-y-0">Title</div>
+                    </div>
+                    <div class="col-4 h3-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>H3</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Titles, Forms, Tabs</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-h4-row">
+                    <div class="col-8">
+                        <div class="h4 ts-h4 m-y-0">Subheader</div>
+                    </div>
+                    <div class="col-4 h4-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>H4</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Forms, Table Titles, Tabs</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+
+                <div class="row p-x-20 align-items-end ts-h5-row">
+                    <div class="col-8">
+                        <div class="h5 ts-h5 m-y-0">Headline</div>
+                    </div>
+                    <div class="col-4 h5-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>h5</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Info Paragraphs</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-h6-row">
+                    <div class="col-8">
+                        <div class="h6 ts-h6 m-y-0">Button</div>
+                    </div>
+                    <div class="col-4 h6-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>H6</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Buttons</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-body-row">
+                    <div class="col-8">
+                        <div class="p ts-body m-y-0">Body</div>
+                    </div>
+                    <div class="col-4 body-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>P</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Body, Station Details</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spacer-50"></div>
+
+                <div class="row p-x-20 align-items-end ts-link-row">
+                    <div class="col-8">
+                        <div class="p ts-link m-y-0">Inline Link</div>
+                    </div>
+                    <div class="col-4 link-color-dots">
+                        <div class="row">
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                            <div class="color-dot"></div>
+                        </div>
+                    </div>
+                    <div class="row align-items-end ts-descriptions pt-10">
+                        <div class="col-8">
+                            <div class="fw-light"><b>P</b> 48px, bold-700</div>
+                        </div>
+                        <div class="col-4">
+                            <div class="fw-light">Links</div>
+                        </div>
+                    </div>
+                </div>
+
+
+
         
             </div>
         </div>
 
         <div class="row v-top buttons-section">
-            <div class="col-lg-3 pt-50 pb-50">
+            <div class="col-lg-3 pt-60 pb-50">
                 <h6>Buttons</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
@@ -112,7 +300,7 @@
         </div>
 
         <div class="row v-top sample-splash-section">
-            <div class="col-lg-3 pt-50">
+            <div class="col-lg-3 pt-60">
                 <h6>Section Sample:</h6>
                 <p class="lead">Splash</p>
             </div>
@@ -122,7 +310,7 @@
         </div>
 
         <div class="row v-top sample-splash-section">
-            <div class="col-lg-3 pt-50">
+            <div class="col-lg-3 pt-60">
                 <h6>Section Sample:</h6>
                 <p class="lead">Body</p>
             </div>
