--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -14,17 +14,18 @@
 <section>
     <div class="container mt-20">
 
+        <!-- Color Scheme Section -->
         <div class="row v-top colors-section">
             <div class="col-lg-3 pt-50">
                 <h6>Colors</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
 
-                <div class="sg-colors-row row">
+                <div class="color-scheme-row row">
 
                     <div class="col-6 col-md-3 bg-white">
                         <div class="p-20 bg-white">
-                            <div class="sg-color-block" style="background-color:black">
+                            <div class="color-scheme-block" style="background-color:black">
                             </div>
                             <div class="p-y-5">
                                 <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
@@ -33,7 +34,7 @@
                     </div>
                     <div class="col-6 col-md-3 bg-white">
                         <div class="p-20 bg-white">
-                            <div class="sg-color-block" style="background-color:black">
+                            <div class="color-scheme-block" style="background-color:black">
                             </div>
                             <div class="p-y-5">
                                 <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
@@ -42,7 +43,7 @@
                     </div>
                     <div class="col-6 col-md-3 bg-white">
                         <div class="p-20 bg-white">
-                            <div class="sg-color-block" style="background-color:black">
+                            <div class="color-scheme-block" style="background-color:black">
                             </div>
                             <div class="p-y-5">
                                 <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
@@ -51,7 +52,7 @@
                     </div>
                     <div class="col-6 col-md-3 bg-white">
                         <div class="p-20 bg-white">
-                            <div class="sg-color-block" style="background-color:black">
+                            <div class="color-scheme-block" style="background-color:black">
                             </div>
                             <div class="p-y-5">
                                 <b>Primary Dark</b><span class="d-block fs-12">#393a3e</span>
@@ -63,7 +64,9 @@
 
             </div>
         </div>
+        <!-- End of Color Scheme Section -->
 
+        <!-- Typeface Section -->
         <div class="row v-top typeface-section">
             <div class="col-lg-3 pt-60">
                 <h6>Primary Typeface</h6>
@@ -87,12 +90,17 @@
                 </div>
             </div>
         </div>
+        <!-- End of Typeface Section -->
 
+
+        <!-- Typesetting Section -->
         <div class="row v-top typesetting-section">
             <div class="col-lg-3 pt-60">
                 <h6>Typesetting</h6>
             </div>
             <div class="col-lg-9 bg-white pt-50 pb-50">
+
+                <!-- Typesetting Display Row -->
                 <div class="row p-x-20 align-items-end ts-h1-row">
                     <div class="col-8">
                         <div class="h1 ts-h1 m-y-0">Display</div>
@@ -117,6 +125,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Header Row -->
                 <div class="row p-x-20 align-items-end ts-h2-row">
                     <div class="col-8">
                         <div class="h2 ts-h2 m-y-0">Header</div>
@@ -141,6 +150,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Title Row -->
                 <div class="row p-x-20 align-items-end ts-h3-row">
                     <div class="col-8">
                         <div class="h3 ts-h3 m-y-0">Title</div>
@@ -165,6 +175,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Subheader Row -->
                 <div class="row p-x-20 align-items-end ts-h4-row">
                     <div class="col-8">
                         <div class="h4 ts-h4 m-y-0">Subheader</div>
@@ -189,7 +200,7 @@
 
                 <div class="spacer-50"></div>
 
-
+                <!-- Typesetting Headline Row -->
                 <div class="row p-x-20 align-items-end ts-h5-row">
                     <div class="col-8">
                         <div class="h5 ts-h5 m-y-0">Headline</div>
@@ -214,6 +225,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Button Row -->
                 <div class="row p-x-20 align-items-end ts-h6-row">
                     <div class="col-8">
                         <div class="h6 ts-h6 m-y-0">Button</div>
@@ -238,6 +250,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Body Row -->
                 <div class="row p-x-20 align-items-end ts-body-row">
                     <div class="col-8">
                         <div class="p ts-body m-y-0">Body</div>
@@ -262,6 +275,7 @@
 
                 <div class="spacer-50"></div>
 
+                <!-- Typesetting Link Row -->
                 <div class="row p-x-20 align-items-end ts-link-row">
                     <div class="col-8">
                         <div class="p ts-link m-y-0">Inline Link</div>
@@ -283,22 +297,56 @@
                         </div>
                     </div>
                 </div>
-
-
-
-        
             </div>
         </div>
+        <!-- End of Typesetting Section -->
 
+        <!-- Buttons Section -->
         <div class="row v-top buttons-section">
             <div class="col-lg-3 pt-60 pb-50">
                 <h6>Buttons</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
-        
+                <div class="row">
+                    <!-- Primary Button Main -->
+                    <div class="col-5 p-20 bg-white">
+                        <div class="sg-dark-btn text-center p-x-10 mb-20" style="background-color:black">
+                            <span class="h6">Primary button</span>
+                        </div>
+
+                        <!-- Primary Button Pressed State -->
+                        <div class="sg-dark-btn sg-btn-pressed text-center p-x-10 mb-20" style="background-color:black">
+                            <span class="h6">Pressed State</span>
+                        </div>
+
+                        <!-- Primary Button Deactivated State -->
+                        <div class="sg-dark-btn sg-btn-deact text-center p-x-10 mb-20" style="background-color:black">
+                            <span class="h6">Deactivated State</span>
+                        </div>
+                    </div>
+
+                    <!-- Secondary Button -->
+                    <div class="col-4 p-20 bg-white">
+                        <div class="sg-light-btn text-center p-x-10 mb-20" style="background-color:rgb(196, 195, 195)">
+                            <span class="h6">Secondary button</span>
+                        </div>
+
+                        <!-- Secondary Button Pressed State -->
+                        <div class="sg-light-btn sg-btn-pressed text-center p-x-10 mb-20" style="background-color:rgb(196, 195, 195)">
+                            <span class="h6">Pressed State</span>
+                        </div>
+                        
+                        <!-- Secondary Button Deactivated State -->
+                        <div class="sg-light-btn sg-btn-deact text-center p-x-10 mb-20" style="background-color:rgb(196, 195, 195)">
+                            <span class="h6">Deactivated State</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- End of Buttons Section -->
 
+        <!-- Splash Sample Section -->
         <div class="row v-top sample-splash-section">
             <div class="col-lg-3 pt-60">
                 <h6>Section Sample:</h6>
@@ -308,8 +356,10 @@
         
             </div>
         </div>
+        <!-- End of Splash Sample Section -->
 
-        <div class="row v-top sample-splash-section">
+        <!-- Body Sample Section -->
+        <div class="row v-top sample-body-section">
             <div class="col-lg-3 pt-60">
                 <h6>Section Sample:</h6>
                 <p class="lead">Body</p>
@@ -318,6 +368,7 @@
         
             </div>
         </div>
+        <!-- End of Body Sample Section -->
 
     </div>
 </section>
