style guide layout done

--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
 
-                <div class="color-scheme-row row">
+                <div class="color-scheme-row row p-x-20">
 
                     <div class="col-6 col-md-3 bg-white">
                         <div class="p-20 bg-white">
@@ -72,10 +72,10 @@
                 <h6>Primary Typeface</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
-                <div class="row p-x-20">
+                <div class="row p-x-40">
                     <span class="primary-typeface">Font</span>
                 </div>
-                <div class="row p-x-20">
+                <div class="row p-x-40">
                     <div class="col-6 col-md-3 bg-white">
                         <span class="typeface-weight">Aa</span>
                     </div>
@@ -101,9 +101,9 @@
             <div class="col-lg-9 bg-white pt-50 pb-50">
 
                 <!-- Typesetting Display Row -->
-                <div class="row p-x-20 align-items-end ts-h1-row">
+                <div class="row p-x-40 align-items-end ts-h1-row">
                     <div class="col-8">
-                        <div class="h1 ts-h1 m-y-0">Display</div>
+                        <div class="h1 sg-h1 m-y-0">Display</div>
                     </div>
                     <div class="col-4 h1-color-dots">
                         <div class="row">
@@ -126,9 +126,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Header Row -->
-                <div class="row p-x-20 align-items-end ts-h2-row">
+                <div class="row p-x-40 align-items-end ts-h2-row">
                     <div class="col-8">
-                        <div class="h2 ts-h2 m-y-0">Header</div>
+                        <div class="h2 sg-h2 m-y-0">Header</div>
                     </div>
                     <div class="col-4 h2-color-dots">
                         <div class="row">
@@ -151,9 +151,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Title Row -->
-                <div class="row p-x-20 align-items-end ts-h3-row">
+                <div class="row p-x-40 align-items-end ts-h3-row">
                     <div class="col-8">
-                        <div class="h3 ts-h3 m-y-0">Title</div>
+                        <div class="h3 sg-h3 m-y-0">Title</div>
                     </div>
                     <div class="col-4 h3-color-dots">
                         <div class="row">
@@ -176,9 +176,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Subheader Row -->
-                <div class="row p-x-20 align-items-end ts-h4-row">
+                <div class="row p-x-40 align-items-end ts-h4-row">
                     <div class="col-8">
-                        <div class="h4 ts-h4 m-y-0">Subheader</div>
+                        <div class="h4 sg-h4 m-y-0">Subheader</div>
                     </div>
                     <div class="col-4 h4-color-dots">
                         <div class="row">
@@ -201,9 +201,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Headline Row -->
-                <div class="row p-x-20 align-items-end ts-h5-row">
+                <div class="row p-x-40 align-items-end ts-h5-row">
                     <div class="col-8">
-                        <div class="h5 ts-h5 m-y-0">Headline</div>
+                        <div class="h5 sg-h5 m-y-0">Headline</div>
                     </div>
                     <div class="col-4 h5-color-dots">
                         <div class="row">
@@ -226,9 +226,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Button Row -->
-                <div class="row p-x-20 align-items-end ts-h6-row">
+                <div class="row p-x-40 align-items-end ts-h6-row">
                     <div class="col-8">
-                        <div class="h6 ts-h6 m-y-0">Button</div>
+                        <div class="h6 sg-h6 m-y-0">Button</div>
                     </div>
                     <div class="col-4 h6-color-dots">
                         <div class="row">
@@ -251,9 +251,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Body Row -->
-                <div class="row p-x-20 align-items-end ts-body-row">
+                <div class="row p-x-40 align-items-end ts-body-row">
                     <div class="col-8">
-                        <div class="p ts-body m-y-0">Body</div>
+                        <div class="sg-body m-y-0">Body</div>
                     </div>
                     <div class="col-4 body-color-dots">
                         <div class="row">
@@ -276,9 +276,9 @@
                 <div class="spacer-50"></div>
 
                 <!-- Typesetting Link Row -->
-                <div class="row p-x-20 align-items-end ts-link-row">
+                <div class="row p-x-40 align-items-end ts-link-row">
                     <div class="col-8">
-                        <div class="p ts-link m-y-0">Inline Link</div>
+                        <div class="sg-link m-y-0" style="color: teal;">Inline Link</div>
                     </div>
                     <div class="col-4 link-color-dots">
                         <div class="row">
@@ -307,7 +307,7 @@
                 <h6>Buttons</h6>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
-                <div class="row">
+                <div class="row p-x-40">
                     <!-- Primary Button Main -->
                     <div class="col-5 p-20 bg-white">
                         <div class="sg-dark-btn text-center p-x-10 mb-20" style="background-color:black">
@@ -327,6 +327,7 @@
 
                     <!-- Secondary Button -->
                     <div class="col-4 p-20 bg-white">
+                        <!-- Secondary Button Main State -->
                         <div class="sg-light-btn text-center p-x-10 mb-20" style="background-color:rgb(196, 195, 195)">
                             <span class="h6">Secondary button</span>
                         </div>
@@ -353,7 +354,15 @@
                 <p class="lead">Splash</p>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
-        
+                <div class="col p-20 bg-white">
+                    <div class="promo-box section-sample-box p-x-40 m-x-40">
+                       <h1>This Is A Display Header</h1>
+                       <h5>This is Headline copy. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores doloremque facere quod, incidunt rerum eveniet culpa quaerat dignissimos consequatur voluptates aperiam totam eaque? Corrupti magnam ex accusamus, officiis eligendi dicta.</h5> 
+                        <div class="sg-dark-btn text-center p-x-10 mt-30 mb-20" style="background-color:black">
+                            <span class="h6">Primary button</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- End of Splash Sample Section -->
@@ -365,7 +374,14 @@
                 <p class="lead">Body</p>
             </div>
             <div class="col-lg-9 bg-white pt-30 pb-50">
-        
+                <div class="col p-20 bg-white">
+                    <div class="promo-box section-sample-box p-x-40 m-x-40">
+                        <h4>This Is A Subeader</h4>
+                        <p class="ts-body">This is Body copy. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores doloremque facere
+                            quod, incidunt rerum eveniet culpa quaerat dignissimos consequatur voluptates aperiam totam eaque? Corrupti
+                            magnam ex accusamus, officiis eligendi dicta. Sit totam ipsa laboriosam praesentium alias voluptas harum aliquam, illo, facilis necessitatibus, numquam dolorum quo. <span class="sq-link" style="color: teal;">This is an Inline Link.</span></p>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- End of Body Sample Section -->
