--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+<!-- Style Guide Info Section -->
 <section class="lg">
     <div class="container">
         <div class="section-title-area text-end">
@@ -12,7 +13,7 @@
 
 
 <section>
-    <div class="container mt-20">
+    <div class="container">
 
         <!-- Color Scheme Section -->
         <div class="row v-top colors-section">
@@ -95,10 +96,10 @@
 
         <!-- Typesetting Section -->
         <div class="row v-top typesetting-section">
-            <div class="col-lg-3 pt-60">
+            <div class="col-lg-3 pt-80">
                 <h6>Typesetting</h6>
             </div>
-            <div class="col-lg-9 bg-white pt-50 pb-50">
+            <div class="col-lg-9 bg-white pt-70 pb-50">
 
                 <!-- Typesetting Display Row -->
                 <div class="row p-x-40 align-items-end ts-h1-row">
@@ -303,10 +304,10 @@
 
         <!-- Buttons Section -->
         <div class="row v-top buttons-section">
-            <div class="col-lg-3 pt-60 pb-50">
+            <div class="col-lg-3 pt-90 pb-50">
                 <h6>Buttons</h6>
             </div>
-            <div class="col-lg-9 bg-white pt-30 pb-50">
+            <div class="col-lg-9 bg-white p-y-60">
                 <div class="row p-x-40">
                     <!-- Primary Button Main -->
                     <div class="col-5 p-20 bg-white">
